# libjltinygismo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: test.yml
julia/: Manifest.toml  run_tests.jl  test.jl
julia/geometry/: scordelis_lo.xml
src/: CMakeLists.txt
src/jltinygismo/: CMakeLists.txt  gismo.cpp  helper.hh
src/jltinygismo/basis/: CMakeLists.txt  bsplinebasis.cpp  gsBasis.cpp  knotvector.cpp  nurbsbasis.cpp  registerbasis.hh
src/jltinygismo/geometry/: CMakeLists.txt  bspline.cpp  gsGeometry.cpp  nurbs.cpp  registergeometries.hh  tensorbspline.cpp  tensornurbs.cpp
src/jltinygismo/utility/: CMakeLists.txt  filereader.cpp  gsmatrix.cpp  nurbsCreator.cpp  paraview.cpp  registerutilities.hh  utilities.cpp
